Made Quick Links Great Again

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 		<h3 class="header-description-text">Frontend Web Developer | Sofware Engineer</h3>
 
 		<div class="ui horizontal bulleted link list header-list-text">
-			<a class="item scroll" target="who-am-i">Activities</a>
-			<a class="item scroll" target="skills">Skills</a>
-			<a class="item scroll" target="bio">Bio</a>
-			<a class="item scroll" target="resume">Contact</a>
+			<a class="item scroll" target="who-am-i">What I Do</a>
+			<a class="item scroll" target="skills">How I Shine</a>
+			<a class="item scroll" target="bio">Who I Am</a>
+			<a class="item scroll" target="resume">Where to Find Me</a>
 		</div>
 		
 		<br>
@@ -52,7 +52,7 @@
 	<!-- Who I Am -->
 	<section id="who-am-i" class="ui center aligned segment no-border-view temp-background">
 
-		<h1 class="section-header">Activities</h1>
+		<h1 class="section-header">What I Do</h1>
 
 		<div class="ui stackable equal width grid container">
 			<div class="column">
@@ -309,7 +309,7 @@
 				<form class="ui form" method="POST" action="https://formspree.io/justpunz@live.com">
 					<div class="no-center">
 						<div class="ui fluid big icon input field">
-						  <input type="text" placeholder="Your Name" required>
+						  <input id="field-name" type="text" placeholder="Your Name" required>
 						  <i class="student icon"></i>
 						</div>
 						<div class="ui fluid big icon input field">
