Changed Header Content

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
 		<h1 class="header-name-large-text">Justin Punzalan.</h1>
 
 
-		<h3 class="header-description-text">Frontend Web Developer | Sofware Engineer</h3>
+		<h3 class="header-description-text">FRONTEND WEB DEVELOPER | SOFTWARE ENGINEER</h3>
 
-		<div class="ui horizontal bulleted link list header-list-text">
+		<br>
+
+		<div class="ui horizontal bulleted link list header-list-text grey-text">
 			<a class="item scroll" target="who-am-i">What I Do</a>
 			<a class="item scroll" target="skills">How I Shine</a>
 			<a class="item scroll" target="bio">Who I Am</a>
