--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 				<div class="ui icon button">
 					<a href="Punzalan_Justin_Resume_2016.pdf" download><i class="massive download icon"></i></a>
 				</div>
-				<h2 class="resume-text-padding " style="padding-left: 8rem; padding-right: 8rem;">
+				<h2 class="resume-text-padding " style="padding-left: 8rem; padding-right: 8rem; font-weight: normal;">
 					Want to know even more about me? Check out my resume or shoot me an email.
 				</h2>
 			</div>
