--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 			<div class="ui stackable column grid container">
 
 				<div class="four wide column">
-					<img class="ui medium circular image" src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/12705613_1130747370293328_530267117174938933_n.jpg?oh=e3ae76f81a8450ef24d1bcfced755fea&oe=58E4311D">
+					<img class="ui medium circular centered image" src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/12705613_1130747370293328_530267117174938933_n.jpg?oh=e3ae76f81a8450ef24d1bcfced755fea&oe=58E4311D">
 				</div>
 
 				<div class="twelve wide column">
