--- a/awards.html
+++ b/awards.html
@@ -20,7 +20,7 @@
 	crossorigin="anonymous"></script>
 
 	<script src="js/semantic.min.js"></script>
-	<script src="js/projects.js"></script>
+	<script src="js/awards.js"></script>
 </head>
 
 <body>
@@ -29,22 +29,9 @@
 	<section class="header-holder temp-background">
 		<div class="ui grid container">
 		  <div class="sixteen wide column">
-		  	<h1 class="header-text">Projects</h1>
+		  	<h1 class="header-text">Awards</h1>
 		  </div>
 		</div>	
 	</section>
 
-	<!-- Websites -->
-	<section>
-		
-	</section>
-
-	<!-- Robotics -->
-	<section>
-		
-	</section>
-	
-	<!-- Chrome Addons -->
-
-	<!--  -->
 </body>
