--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	
 	<div class="pusher">
 		<!-- Header -->
-		<section class="ui center aligned segment header-holder no-border-view fadeInDown animated" id="header">
+		<section class="ui center aligned segment header-home-holder no-border-view fadeInDown animated" id="header">
 
 			<h1 class="header-hello-large-text">Hello, I'm</h1>
 			<h1 class="header-name-large-text">Justin Punzalan.</h1>
