--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 <body>
 
 	<div class="ui left vertical inverted sidebar labeled icon menu side-nav-bar">
-	  <a class="item">
+	  <a class="item active">
 	    <i class="home icon"></i>
 	    Home
 	  </a>
-	  <a class="item">
+	  <a class="item" href="projects.html">
 	    <i class="block layout icon"></i>
 	    Projects
 	  </a>
-	  <a class="item">
+	  <a class="item" href="awards.html">
 	    <i class="trophy icon"></i>
 	    Awards
 	  </a>
-	  <a class="item">
+	  <a class="item" href="about.html">
 	    <i class="info icon"></i>
 	    About
 	  </a>
