Changed Nav Bar Naming

--- a/awards.html
+++ b/awards.html
@@ -32,7 +32,7 @@
 	  </a>
 	  <a class="item" href="projects.html">
 	    <i class="block layout icon"></i>
-	    Projects
+	    Projects & <br> Experience
 	  </a>
 	  <a class="item active">
 	    <i class="trophy icon"></i>
