Added Projects Outline

--- a/projects.html
+++ b/projects.html
@@ -29,22 +29,111 @@
 	<section class="header-holder temp-background">
 		<div class="ui grid container">
 		  <div class="sixteen wide column">
-		  	<h1 class="header-text">Projects</h1>
+		  	<h1 class="header-text">Projects & Experience</h1>
 		  </div>
 		</div>	
 	</section>
 
-	<!-- Websites -->
-	<section>
-		
+	<!-- Current -->
+	<section class="ui current-holder container">
+		<h1 class="award-header">Current</h1>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">Team 4 ELEMENT</h1>
+				<h2>FIRST ROBOTICS MENTOR</h2>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">Sep 2015 - Current</h1>
+			</div>
+		</div>
 	</section>
 
-	<!-- Robotics -->
-	<section>
-		
+	<!-- Past -->
+	<section class="ui container">
+		<h1 class="award-header">Past</h1>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">TakeSessions</h1>
+				<h2>Lead Frontend Developer</h2>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">Aug 2016 - November 2016</h1>
+			</div>
+		</div>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">Yudek</h1>
+				<h2>Intern</h2>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">Jun 2016 to Aug 2016</h1>
+			</div>
+		</div>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">RESET Content</h1>
+				<h2>Technical Robotic Consultant & Production Assistant</h2>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">March 2016</h1>
+			</div>
+		</div>
 	</section>
 	
-	<!-- Chrome Addons -->
+	<!-- Side Projects -->
+	<section class="ui current-holder container">
+		<h1 class="award-header">Projects</h1>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">StudyTime</h1>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">Jan 2015</h1>
+			</div>
+		</div>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">CelverText</h1>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">Dec 2016</h1>
+			</div>
+		</div>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">TheBBCodeClub</h1>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">November 2016</h1>
+			</div>
+		</div>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">Team 4 Robots</h1>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">Sep 2015 - Aug 2016</h1>
+			</div>
+		</div>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">Rocket Flight Computers</h1>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">March 2016</h1>
+			</div>
+		</div>
+	</section>
 
-	<!--  -->
+	<!-- Hackathons -->
+	<section></section>
 </body>
