Added Project Structure

--- a/projects.html
+++ b/projects.html
@@ -135,5 +135,61 @@
 	</section>
 
 	<!-- Hackathons -->
-	<section></section>
+	<section class="ui current-holder container">
+		<h1 class="award-header">Hackathons</h1>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">LA Hacks</h1>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">April 2016</h1>
+			</div>
+		</div>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">Valley Economic Hackathon</h1>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">November 2015</h1>
+			</div>
+		</div>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">HackingEDU</h1>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">October 2015</h1>
+			</div>
+		</div>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">SDHacks</h1>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">October 2015</h1>
+			</div>
+		</div>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">Code For India</h1>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">September 2015</h1>
+			</div>
+		</div>
+		<div class="ui grid stackable">
+			<div class="eleven wide column">
+				<h1 class="title-holder">CodeDayLA</h1>
+				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			</div>
+			<div class="column five wide right aligned">
+				<h1 class="award-header title-holder">June 2015</h1>
+			</div>
+		</div>
+	</section>
 </body>
