--- a/projects.html
+++ b/projects.html
@@ -25,171 +25,206 @@
 
 <body>
 
-	<!-- Header -->
-	<section class="header-holder temp-background">
-		<div class="ui grid container">
-		  <div class="sixteen wide column">
-		  	<h1 class="header-text">Projects & Experience</h1>
+	<div class="ui left vertical inverted sidebar labeled icon menu side-nav-bar">
+	  <a class="item" href="index.html">
+	    <i class="home icon"></i>
+	    Home
+	  </a>
+	  <a class="item active">
+	    <i class="block layout icon"></i>
+	    Projects & <br> Experience
+	  </a>
+	  <a class="item" href="awards.html">
+	    <i class="trophy icon"></i>
+	    Awards
+	  </a>
+	  <a class="item" href="about.html">
+	    <i class="info icon"></i>
+	    About
+	  </a>
+	</div>
+
+	<div class="ui sticky nav-margin" id="sticky">
+		<div class="ui animated large button black" tabindex="0" onclick="toggleSideNav()">
+		  <div class="hidden content">Menu</div>
+		  <div class="visible content">
+		   <i class="content icon"></i>
 		  </div>
-		</div>	
-	</section>
+		</div>
+	</div>
 
-	<!-- Current -->
-	<section class="ui current-holder container">
-		<h1 class="award-header">Current</h1>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">Team 4 ELEMENT</h1>
-				<h2>FIRST ROBOTICS MENTOR</h2>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
-			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">Sep 2015 - Current</h1>
-			</div>
-		</div>
-	</section>
+	<div class="pusher">
+		<!-- Header -->
+		<section class="header-holder award-background">
+			<div class="ui grid container">
+			  <div class="sixteen wide column">
+			  	<h1 class="header-text">Projects & Experience</h1>
+			  </div>
+			</div>	
+		</section>
 
-	<!-- Past -->
-	<section class="ui container">
-		<h1 class="award-header">Past</h1>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">TakeSessions</h1>
-				<h2>Lead Frontend Developer</h2>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+		<!-- Current -->
+		<section class="ui current-holder container">
+			<h1 class="award-header">Current</h1>
+			<div class="ui grid stackable">
+				<div class="eleven wide column">
+					<h1 class="title-holder">Team 4 ELEMENT</h1>
+					<h2>FIRST ROBOTICS MENTOR</h2>
+					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+				</div>
+				<div class="column five wide right aligned">
+					<h1 class="award-header title-holder">Sep 2015 - Current</h1>
+				</div>
 			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">Aug 2016 - November 2016</h1>
-			</div>
-		</div>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">Yudek</h1>
-				<h2>Intern</h2>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
-			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">Jun 2016 to Aug 2016</h1>
-			</div>
-		</div>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">RESET Content</h1>
-				<h2>Technical Robotic Consultant & Production Assistant</h2>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
-			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">March 2016</h1>
-			</div>
-		</div>
-	</section>
-	
-	<!-- Side Projects -->
-	<section class="ui current-holder container">
-		<h1 class="award-header">Projects</h1>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">StudyTime</h1>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
-			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">Jan 2015</h1>
-			</div>
-		</div>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">CelverText</h1>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
-			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">Dec 2016</h1>
-			</div>
-		</div>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">TheBBCodeClub</h1>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
-			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">November 2016</h1>
-			</div>
-		</div>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">Team 4 Robots</h1>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
-			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">Sep 2015 - Aug 2016</h1>
-			</div>
-		</div>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">Rocket Flight Computers</h1>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
-			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">March 2016</h1>
-			</div>
-		</div>
-	</section>
+		</section>
 
-	<!-- Hackathons -->
-	<section class="ui current-holder container">
-		<h1 class="award-header">Hackathons</h1>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">LA Hacks</h1>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+		<!-- Past -->
+		<section class="temp-background">
+			<div class="ui container">
+				<h1 class="award-header">Past</h1>
+				<div class="ui grid stackable">
+					<div class="eleven wide column">
+						<h1 class="title-holder">TakeSessions</h1>
+						<h2>Lead Frontend Developer</h2>
+						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+					</div>
+					<div class="column five wide right aligned">
+						<h1 class="award-header title-holder">Aug 2016 - November 2016</h1>
+					</div>
+				</div>
+				<div class="ui grid stackable">
+					<div class="eleven wide column">
+						<h1 class="title-holder">Yudek</h1>
+						<h2>Intern</h2>
+						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+					</div>
+					<div class="column five wide right aligned">
+						<h1 class="award-header title-holder">Jun 2016 to Aug 2016</h1>
+					</div>
+				</div>
+				<div class="ui grid stackable">
+					<div class="eleven wide column">
+						<h1 class="title-holder">RESET Content</h1>
+						<h2>Technical Robotic Consultant & Production Assistant</h2>
+						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+					</div>
+					<div class="column five wide right aligned">
+						<h1 class="award-header title-holder">March 2016</h1>
+					</div>
+				</div>
 			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">April 2016</h1>
+		</section>
+		
+		<!-- Side Projects -->
+		<section class="ui current-holder container">
+			<h1 class="award-header">Projects</h1>
+			<div class="ui grid stackable">
+				<div class="eleven wide column">
+					<h1 class="title-holder">StudyTime</h1>
+					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+				</div>
+				<div class="column five wide right aligned">
+					<h1 class="award-header title-holder">Jan 2015</h1>
+				</div>
 			</div>
-		</div>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">Valley Economic Hackathon</h1>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			<div class="ui grid stackable">
+				<div class="eleven wide column">
+					<h1 class="title-holder">CelverText</h1>
+					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+				</div>
+				<div class="column five wide right aligned">
+					<h1 class="award-header title-holder">Dec 2016</h1>
+				</div>
 			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">November 2015</h1>
+			<div class="ui grid stackable">
+				<div class="eleven wide column">
+					<h1 class="title-holder">TheBBCodeClub</h1>
+					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+				</div>
+				<div class="column five wide right aligned">
+					<h1 class="award-header title-holder">November 2016</h1>
+				</div>
 			</div>
-		</div>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">HackingEDU</h1>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+			<div class="ui grid stackable">
+				<div class="eleven wide column">
+					<h1 class="title-holder">Team 4 Robots</h1>
+					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+				</div>
+				<div class="column five wide right aligned">
+					<h1 class="award-header title-holder">Sep 2015 - Aug 2016</h1>
+				</div>
 			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">October 2015</h1>
+			<div class="ui grid stackable">
+				<div class="eleven wide column">
+					<h1 class="title-holder">Rocket Flight Computers</h1>
+					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+				</div>
+				<div class="column five wide right aligned">
+					<h1 class="award-header title-holder">March 2016</h1>
+				</div>
 			</div>
-		</div>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">SDHacks</h1>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+		</section>
+
+		<!-- Hackathons -->
+		<section class="temp-background">
+			<div class="ui current-holder container ">
+				<h1 class="award-header">Hackathons</h1>
+				<div class="ui grid stackable">
+					<div class="eleven wide column">
+						<h1 class="title-holder">LA Hacks</h1>
+						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+					</div>
+					<div class="column five wide right aligned">
+						<h1 class="award-header title-holder">April 2016</h1>
+					</div>
+				</div>
+				<div class="ui grid stackable">
+					<div class="eleven wide column">
+						<h1 class="title-holder">Valley Economic Hackathon</h1>
+						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+					</div>
+					<div class="column five wide right aligned">
+						<h1 class="award-header title-holder">November 2015</h1>
+					</div>
+				</div>
+				<div class="ui grid stackable">
+					<div class="eleven wide column">
+						<h1 class="title-holder">HackingEDU</h1>
+						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+					</div>
+					<div class="column five wide right aligned">
+						<h1 class="award-header title-holder">October 2015</h1>
+					</div>
+				</div>
+				<div class="ui grid stackable">
+					<div class="eleven wide column">
+						<h1 class="title-holder">SDHacks</h1>
+						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+					</div>
+					<div class="column five wide right aligned">
+						<h1 class="award-header title-holder">October 2015</h1>
+					</div>
+				</div>
+				<div class="ui grid stackable">
+					<div class="eleven wide column">
+						<h1 class="title-holder">Code For India</h1>
+						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+					</div>
+					<div class="column five wide right aligned">
+						<h1 class="award-header title-holder">September 2015</h1>
+					</div>
+				</div>
+				<div class="ui grid stackable">
+					<div class="eleven wide column">
+						<h1 class="title-holder">CodeDayLA</h1>
+						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+					</div>
+					<div class="column five wide right aligned">
+						<h1 class="award-header title-holder">June 2015</h1>
+					</div>
+				</div>
 			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">October 2015</h1>
-			</div>
-		</div>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">Code For India</h1>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
-			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">September 2015</h1>
-			</div>
-		</div>
-		<div class="ui grid stackable">
-			<div class="eleven wide column">
-				<h1 class="title-holder">CodeDayLA</h1>
-				<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
-			</div>
-			<div class="column five wide right aligned">
-				<h1 class="award-header title-holder">June 2015</h1>
-			</div>
-		</div>
-	</section>
+		</section>
+	</div>
+
 </body>
