Added basic padding and margins

--- a/projects.html
+++ b/projects.html
@@ -64,163 +64,163 @@
 		</section>
 
 		<!-- Current -->
-		<section class="ui current-holder container">
-			<h1 class="award-header">Current</h1>
-			<div class="ui grid stackable">
+		<section class="ui current-holder container section-holder">
+			<h1 class="award-header big-header">Current</h1>
+			<div class="ui grid stackable project-holder">
 				<div class="eleven wide column">
-					<h1 class="title-holder">Team 4 ELEMENT</h1>
+					<h1 class="title-holder project-header">Team 4 ELEMENT</h1>
 					<h2>FIRST ROBOTICS MENTOR</h2>
 					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 				</div>
 				<div class="column five wide right aligned">
-					<h1 class="award-header title-holder">Sep 2015 - Current</h1>
+					<h1 class="award-header title-holder project-header">Sep 2015 - Current</h1>
 				</div>
 			</div>
 		</section>
 
 		<!-- Past -->
-		<section class="temp-background">
+		<section class="temp-background section-holder">
 			<div class="ui container">
-				<h1 class="award-header">Past</h1>
-				<div class="ui grid stackable">
+				<h1 class="award-header big-header">Past</h1>
+				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
-						<h1 class="title-holder">TakeSessions</h1>
+						<h1 class="title-holder project-header">TakeSessions</h1>
 						<h2>Lead Frontend Developer</h2>
 						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 					</div>
 					<div class="column five wide right aligned">
-						<h1 class="award-header title-holder">Aug 2016 - November 2016</h1>
+						<h1 class="award-header title-holder project-header">Aug 2016 - November 2016</h1>
 					</div>
 				</div>
-				<div class="ui grid stackable">
+				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
-						<h1 class="title-holder">Yudek</h1>
+						<h1 class="title-holder project-header">Yudek</h1>
 						<h2>Intern</h2>
 						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 					</div>
 					<div class="column five wide right aligned">
-						<h1 class="award-header title-holder">Jun 2016 to Aug 2016</h1>
+						<h1 class="award-header title-holder project-header">Jun 2016 to Aug 2016</h1>
 					</div>
 				</div>
-				<div class="ui grid stackable">
+				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
-						<h1 class="title-holder">RESET Content</h1>
+						<h1 class="title-holder project-header">RESET Content</h1>
 						<h2>Technical Robotic Consultant & Production Assistant</h2>
 						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 					</div>
 					<div class="column five wide right aligned">
-						<h1 class="award-header title-holder">March 2016</h1>
+						<h1 class="award-header title-holder project-header">March 2016</h1>
 					</div>
 				</div>
 			</div>
 		</section>
 		
 		<!-- Side Projects -->
-		<section class="ui current-holder container">
-			<h1 class="award-header">Projects</h1>
-			<div class="ui grid stackable">
+		<section class="ui current-holder container section-holder">
+			<h1 class="award-header big-header">Projects</h1>
+			<div class="ui grid stackable project-holder">
 				<div class="eleven wide column">
-					<h1 class="title-holder">StudyTime</h1>
+					<h1 class="title-holder project-header">StudyTime</h1>
 					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 				</div>
 				<div class="column five wide right aligned">
-					<h1 class="award-header title-holder">Jan 2015</h1>
+					<h1 class="award-header title-holder project-header">Jan 2015</h1>
 				</div>
 			</div>
-			<div class="ui grid stackable">
+			<div class="ui grid stackable project-holder">
 				<div class="eleven wide column">
-					<h1 class="title-holder">CelverText</h1>
+					<h1 class="title-holder project-header">CelverText</h1>
 					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 				</div>
 				<div class="column five wide right aligned">
-					<h1 class="award-header title-holder">Dec 2016</h1>
+					<h1 class="award-header title-holder project-header">Dec 2016</h1>
 				</div>
 			</div>
-			<div class="ui grid stackable">
+			<div class="ui grid stackable project-holder">
 				<div class="eleven wide column">
-					<h1 class="title-holder">TheBBCodeClub</h1>
+					<h1 class="title-holder project-header">TheBBCodeClub</h1>
 					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 				</div>
 				<div class="column five wide right aligned">
-					<h1 class="award-header title-holder">November 2016</h1>
+					<h1 class="award-header title-holder project-header">November 2016</h1>
 				</div>
 			</div>
-			<div class="ui grid stackable">
+			<div class="ui grid stackable project-holder">
 				<div class="eleven wide column">
-					<h1 class="title-holder">Team 4 Robots</h1>
+					<h1 class="title-holder project-header">Team 4 Robots</h1>
 					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 				</div>
 				<div class="column five wide right aligned">
-					<h1 class="award-header title-holder">Sep 2015 - Aug 2016</h1>
+					<h1 class="award-header title-holder project-header">Sep 2015 - Aug 2016</h1>
 				</div>
 			</div>
-			<div class="ui grid stackable">
+			<div class="ui grid stackable project-holder">
 				<div class="eleven wide column">
-					<h1 class="title-holder">Rocket Flight Computers</h1>
+					<h1 class="title-holder project-header">Rocket Flight Computers</h1>
 					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 				</div>
 				<div class="column five wide right aligned">
-					<h1 class="award-header title-holder">March 2016</h1>
+					<h1 class="award-header title-holder project-header">March 2016</h1>
 				</div>
 			</div>
 		</section>
 
 		<!-- Hackathons -->
-		<section class="temp-background">
+		<section class="temp-background section-holder">
 			<div class="ui current-holder container ">
-				<h1 class="award-header">Hackathons</h1>
-				<div class="ui grid stackable">
+				<h1 class="award-header big-header">Hackathons</h1>
+				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
-						<h1 class="title-holder">LA Hacks</h1>
+						<h1 class="title-holder project-header">LA Hacks</h1>
 						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 					</div>
 					<div class="column five wide right aligned">
-						<h1 class="award-header title-holder">April 2016</h1>
+						<h1 class="award-header title-holder project-header">April 2016</h1>
 					</div>
 				</div>
-				<div class="ui grid stackable">
+				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
-						<h1 class="title-holder">Valley Economic Hackathon</h1>
+						<h1 class="title-holder project-header">Valley Economic Hackathon</h1>
 						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 					</div>
 					<div class="column five wide right aligned">
-						<h1 class="award-header title-holder">November 2015</h1>
+						<h1 class="award-header title-holder project-header">November 2015</h1>
 					</div>
 				</div>
-				<div class="ui grid stackable">
+				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
-						<h1 class="title-holder">HackingEDU</h1>
+						<h1 class="title-holder project-header">HackingEDU</h1>
 						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 					</div>
 					<div class="column five wide right aligned">
-						<h1 class="award-header title-holder">October 2015</h1>
+						<h1 class="award-header title-holder project-header">October 2015</h1>
 					</div>
 				</div>
-				<div class="ui grid stackable">
+				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
-						<h1 class="title-holder">SDHacks</h1>
+						<h1 class="title-holder project-header">SDHacks</h1>
 						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 					</div>
 					<div class="column five wide right aligned">
-						<h1 class="award-header title-holder">October 2015</h1>
+						<h1 class="award-header title-holder project-header">October 2015</h1>
 					</div>
 				</div>
-				<div class="ui grid stackable">
+				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
-						<h1 class="title-holder">Code For India</h1>
+						<h1 class="title-holder project-header">Code For India</h1>
 						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 					</div>
 					<div class="column five wide right aligned">
-						<h1 class="award-header title-holder">September 2015</h1>
+						<h1 class="award-header title-holder project-header">September 2015</h1>
 					</div>
 				</div>
-				<div class="ui grid stackable">
+				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
-						<h1 class="title-holder">CodeDayLA</h1>
+						<h1 class="title-holder project-header">CodeDayLA</h1>
 						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 					</div>
 					<div class="column five wide right aligned">
-						<h1 class="award-header title-holder">June 2015</h1>
+						<h1 class="award-header title-holder project-header">June 2015</h1>
 					</div>
 				</div>
 			</div>
