Finished Spacing for projects

--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
 			<div class="ui grid stackable project-holder">
 				<div class="eleven wide column">
 					<h1 class="title-holder project-header">Team 4 ELEMENT</h1>
-					<h2>FIRST ROBOTICS MENTOR</h2>
+					<h2 class="sub-description-holder">FIRST ROBOTICS MENTOR</h2>
 					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 				</div>
 				<div class="column five wide right aligned">
@@ -85,7 +85,7 @@
 				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
 						<h1 class="title-holder project-header">TakeSessions</h1>
-						<h2>Lead Frontend Developer</h2>
+						<h2 class="sub-description-holder">Lead Frontend Developer</h2>
 						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 					</div>
 					<div class="column five wide right aligned">
@@ -95,7 +95,7 @@
 				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
 						<h1 class="title-holder project-header">Yudek</h1>
-						<h2>Intern</h2>
+						<h2 class="sub-description-holder">Intern</h2>
 						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 					</div>
 					<div class="column five wide right aligned">
@@ -105,7 +105,7 @@
 				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
 						<h1 class="title-holder project-header">RESET Content</h1>
-						<h2>Technical Robotic Consultant & Production Assistant</h2>
+						<h2 class="sub-description-holder">Technical Robotic Consultant & Production Assistant</h2>
 						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 					</div>
 					<div class="column five wide right aligned">
