Added Color to footer and Linkedin

--- a/awards.html
+++ b/awards.html
@@ -119,6 +119,13 @@
 			</div>
 			
 		</section>
+
+		<!-- Footer -->
+		<section class="ui center aligned segment no-border-view alt-footer-color " id="footer">
+			<p class="footer-text">Designed and developed by Justin Punzalan © 2017</p>
+			<a href="https://github.com/justAdevTV" target="_blank"><i class="big github icon"></i></a>
+			<a href="https://www.linkedin.com/in/justin-punz" target="_blank"><i class="big linkedin square icon"></i></a>
+		</section>
 	</div>
 
 </body>
