--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 		<section class="ui center aligned segment no-border-view footer-background" id="footer">
 			<p class="footer-text">Designed and developed by Justin Punzalan © 2017</p>
 			<a href="https://github.com/justAdevTV" target="_blank"><i class="big github icon"></i></a>
-			<a href="#"><i class="big linkedin square icon"></i></a>
+			<a href="https://www.linkedin.com/in/justin-punz" target="_blank"><i class="big linkedin square icon"></i></a>
 		</section>
 	</div>
 </body>
