--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@
 	    <i class="trophy icon"></i>
 	    Awards
 	  </a>
-	  <a class="item" href="about.html">
-	    <i class="info icon"></i>
-	    About
-	  </a>
 	</div>
 
 	<div class="ui sticky nav-margin" id="sticky">
@@ -309,7 +305,7 @@
 
 				<div class="twelve wide column">
 					<div class="ui container left aligned">
-						<p class="bio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p class="bio-text">Greetings and salutations! My name is Justin Punzalan and I just want to become the best developer I possibly can be. I attempt to reach this goal through internships, work, and side projects. You'll often find me creating websites, robots, and even AI chatbots. In other words, I'm a fast learning developer with a passion for creating awesome and amazing things!</p>
 					</div>
 				</div>
 
