Added content to cards. (Still needs new pictures)

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 									<span class="date">Recent - TakeSessions</span>
 								</div>
 								<div class="description">
-									Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.
+									Proficient in front-end web development. Beginner back-end developer. Skillset includes HTML, CSS, JS, Emberjs and bootstrap along with other boilerplates. Also knowledgeable in SQL and Expressjs.
 								</div>
 							</div>
 							<div class="extra content">
@@ -146,10 +146,10 @@
 							<div class="content ui left aligned">
 								<div class="header">Frequent Hackathon Attendee</div>
 								<div class="meta">
-									<a>7 Hackathons Attended</a>
+									<a>6 Hackathons Attended</a>
 								</div>
 								<div class="description">
-									Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.
+									Avid hackathon participant. Won 3 out of 6 competitions attended. Not really competitive more there just to learn new things and meet new awesome people. Attending LAHacks in the Spring.
 								</div>
 							</div>
 							<div class="extra content">
