Updated Projects desc and hackathon

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 									<a>6 Hackathons Attended</a>
 								</div>
 								<div class="description">
-									Avid hackathon participant. Won 3 out of 6 competitions attended. Not really competitive more there just to learn new things and meet new awesome people. Attending LAHacks in the Spring.
+									Avid hackathon participant. Won 3 out of 6 competitions attended. Main goal is to learn new things and meet new awesome people. Hit me up if you need a teammate. Attending LAHacks in the Spring. 
 								</div>
 							</div>
 							<div class="extra content">
