--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
 					<div class="eleven wide column">
 						<h1 class="title-holder project-header">TakeSessions</h1>
 						<h2 class="sub-description-holder">Lead Frontend Developer</h2>
-						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+						<p>Responsible for planning, building, and creating all web pages. Had to create and convert PSD UI mockups into HTML/CSS via Emberjs. Also organized and maintained SCRUM sheet and sprint meetings.</p>
 					</div>
 					<div class="column five wide right aligned">
 						<h1 class="award-header title-holder project-header">Aug 2016 - November 2016</h1>
@@ -92,7 +92,7 @@
 					<div class="eleven wide column">
 						<h1 class="title-holder project-header">Yudek</h1>
 						<h2 class="sub-description-holder">Intern</h2>
-						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+						<p>Full-stack web development. Web application built with Emberjs and PHP. Responsible for maintaining and creating several pages using Emberjs.</p>
 					</div>
 					<div class="column five wide right aligned">
 						<h1 class="award-header title-holder project-header">Jun 2016 to Aug 2016</h1>
@@ -102,7 +102,7 @@
 					<div class="eleven wide column">
 						<h1 class="title-holder project-header">RESET Content</h1>
 						<h2 class="sub-description-holder">Technical Robotic Consultant & Production Assistant</h2>
-						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+						<p>Responsible for informing set managers on what all the robots on set were capable of. Also ensured that all robots were functional. Pre-programmed several robots on set.</p>
 					</div>
 					<div class="column five wide right aligned">
 						<h1 class="award-header title-holder project-header">March 2016</h1>
