Changed formatting in Projects

--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/projects.css">
 	<link rel="stylesheet" type="text/css" href="css/semantic.min.css">
 	
 	<script
@@ -203,7 +204,7 @@
 				</div>
 				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
-						<h1 class="title-holder project-header">Code For India</h1>
+						<h1 class="title-holder project-header">Code For India @Google HQ</h1>
 						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
 					</div>
 					<div class="column five wide right aligned">
@@ -213,7 +214,7 @@
 				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
 						<h1 class="title-holder project-header">CodeDayLA</h1>
-						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+						<p>Created a web application that saves the user’s parked car’s location Never forget where you parked.</p>
 					</div>
 					<div class="column five wide right aligned">
 						<h1 class="award-header title-holder project-header">June 2015</h1>
